# perm-rs

./: Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/actions/set-version/: action.yml
.github/workflows/: build.yml  formatting.yml  test.yml  version_bump.yml
benchmark/: generate_figure.py  perm_benchmark.py
perm_rs/: __init__.py  __settings.py  perm.py  perm_rs.pyi
src/: lib.rs  permanent.rs  profiler.rs  random_unitary.rs
tests/: permanent_test.py  settings_test.py
