[package]
name = "perm-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "perm_rs"
crate-type = ["cdylib", "lib"]

[dependencies]
num-complex = "0.4.6"
pyo3 = { version = "0.28.2", features = ["num-complex"] }

[dev-dependencies]
approx = "0.5.1"
rand = "0.10.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]