[package]
name = "perm-rs"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "perm_rs"
crate-type = ["cdylib", "lib"]

[dependencies]
ndarray = "0.17.2"
num-complex = "0.4.6"
num-traits = "0.2.19"
numpy = "0.28.0"
pyo3 = { version = "0.28.2", features = ["abi3-py310", "num-complex"] }
rayon = "1.11.0"

[dev-dependencies]
approx = "0.5.1"
rand = "0.10.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]