[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "perm-rs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

## pytest config
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra" 
testpaths = ["tests"]
python_files = ["*_benchmark.py", "*_test.py"]
